SERVER-64496 make csfle version 64-bit as per spec

GitOrigin-RevId: 16e26d39d8c7cb0b05188a782d7d693e3ff1550b